// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalLink component Should render the ExternalLink component 1`] = `
<a
  href="https://google.com"
  rel="noopener noreferrer"
  target="_blank"
>
  Link
</a>
`;

exports[`ExternalLink component Should render the ExternalLink component with more attributes 1`] = `
<a
  className="link"
  href="https://google.com"
  rel="noopener noreferrer"
  target="_blank"
>
  Link
</a>
`;
